# amazing-marvin-mcp

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  SMITHERY_DEPLOYMENT.md  amazing_marvin_server.py  pyproject.toml  requirements.txt  test_server.py
src/amazing_marvin_mcp/: __init__.py  server.py
